# packages/backend/src/entities.ts
@@ -3,7 +3,6 @@ import { Group } from './groups/group.entity';
 import { Course } from './courses/course.entity';
 import { ClassEntity } from './classes/class.entity';
 import { Room } from './rooms/room.entity';
-import { GroupTemplate } from './group-templates/group-template.entity';
 import { Settings } from './settings/settings.entity';
 import { User } from './users/user.entity';
 import { Payment } from './payments/payment.entity';
@@ -15,7 +14,6 @@ export const entities = [
   Course,
   ClassEntity,
   Room,
-  GroupTemplate,
   Settings,
   User,
   Payment,
