# packages/backend/src/group-templates/dto/update-group-template.dto.ts
@@ -1,6 +1,0 @@
-import { PartialType } from '@nestjs/swagger';
-import { CreateGroupTemplateDto } from './create-group-template.dto';
-
-export class UpdateGroupTemplateDto extends PartialType(
-  CreateGroupTemplateDto,
-) {}
